--- a/RentaVehiculos/src/sgrv/gui/ConsultaVehiculo.form
+++ b/RentaVehiculos/src/sgrv/gui/ConsultaVehiculo.form
@@ -132,15 +132,14 @@
     <Component class="javax.swing.JComboBox" name="jFiltrosCB">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="8">
+          <StringArray count="7">
             <StringItem index="0" value="Tipo"/>
             <StringItem index="1" value="Modelo"/>
-            <StringItem index="2" value="Kilometraje"/>
-            <StringItem index="3" value="Marca"/>
-            <StringItem index="4" value="Color"/>
-            <StringItem index="5" value="No. Pasajeros"/>
-            <StringItem index="6" value="No. Cilindros"/>
-            <StringItem index="7" value="Precio"/>
+            <StringItem index="2" value="Marca"/>
+            <StringItem index="3" value="Color"/>
+            <StringItem index="4" value="No. Pasajeros"/>
+            <StringItem index="5" value="No. Cilindros"/>
+            <StringItem index="6" value="Presupuesto"/>
           </StringArray>
         </Property>
       </Properties>
